--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>david lim</title>
 </head>
 <body>
+    <div class="navigation-bar">
+        <nav>
+            <ul id="tab-list">
+                <li><a href="#home">home</a></li>
+                <li><a href="#skills">skills</a></li>
+                <li><a href="#blog">blog</a></li>
+            </ul>
+        </nav>
+    </div>
     <h1>Hello World</h1>
 </body>
 </html>
