--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="david lim's personal website">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/707024b310.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <title>david lim</title>
 </head>
@@ -12,11 +13,19 @@
         <nav>
             <ul id="tab-list">
                 <li><a href="#home">home</a></li>
-                <li><a href="#skills">skills</a></li>
+                <li><a href="#projects">projects</a></li>
                 <li><a href="#blog">blog</a></li>
             </ul>
         </nav>
     </div>
-    
+    <div class="social-buttons">
+        <ul>
+            <li><a href="https://www.linkedin.com/in/david-lim-cs" target="_blank">linkedin</a></li>
+            <i class="fa-brands fa-buffer"></i>
+            <li><a href="https://github.com/dav1dddddddd" target="_blank">github</a></li>
+            <i class="fa-brands fa-buffer"></i>
+            <li><a href="https://www.instagram.com/davldlim" target="_blank">instagram</a></li>
+        </ul>
+    </div>
 </body>
 </html>
