fix: forgot to stage theme toggle button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>david lim</title>
 </head>
 <body>
+    <button class="theme-toggle" id="themeToggle" aria-label="Toggle light/dark theme">
+        <i class="fa-solid fa-moon" id="themeIcon"></i>
+    </button>
     <div class="navigation-bar">
         <nav>
             <ul id="tab-list">
@@ -27,5 +30,6 @@
             <li><a href="https://www.instagram.com/davldlim" target="_blank">instagram</a></li>
         </ul>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
