--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             </ul>
         </nav>
     </div>
+<img class="profile" src="assets/DSC02592.JPG">
+    <div class="description">
+        <h1>hi! i'm david lim.</h1>
+        <h2>cs student @ utd</h2>
+        <h2>software engineer</h2>
+        <h2>cat dad</h2>
+    </div>
     <div class="social-buttons">
         <ul>
             <li><a href="https://www.linkedin.com/in/david-lim-cs" target="_blank">linkedin</a></li>
