--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="david lim's personal website">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/707024b310.js" crossorigin="anonymous"></script>
-        <title>david lim</title>
+    <title>david lim</title>
 </head>
 <body>
     <button class="theme-toggle" id="themeToggle" aria-label="Toggle light/dark theme">
@@ -14,13 +14,13 @@
     <div class="navigation-bar">
         <nav>
             <ul id="tab-list">
-                <li><a href="#home">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#blog">blog</a></li>
             </ul>
         </nav>
     </div>
-<img class="profile" src="assets/DSC02592.JPG">
+    <img class="profile" src="assets/DSC02592.JPG">
     <div class="description">
         <h1>hi! i'm david lim.</h1>
         <h2>cs student @ utd</h2>
