feat: added to description

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     </div>
     <img class="profile" src="assets/DSC02592.JPG">
     <div class="description">
-        <h1>hi! i'm david lim.</h1>
-        <h2>cs student @ utd</h2>
-        <h2>software engineer</h2>
-        <h2>cat dad</h2>
+      <h1>hi! i'm david lim.</h1>
+      <h2>cs student @ utd</h2>
+      <h2>software engineer</h2>
+      <h2>cat dad</h2>
+      <h3>i was born and raised in a small town in illinois.</h3>
     </div>
     <div class="social-buttons">
         <ul>
