feat: animated scroll icon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </nav>
     </div>
     <img class="profile" src="assets/DSC02592.JPG">
+<dotlottie-wc class="light-scroll" src="https://lottie.host/64a57eb9-553f-4b7b-b079-265538031f6b/yOF8qjkcfI.lottie" autoplay loop></dotlottie-wc>
+    <dotlottie-wc class="dark-scroll"src="https://lottie.host/33d6004e-60b2-412f-9141-dba353a4229a/RZrMK2vpIH.lottie" autoplay loop></dotlottie-wc>
     <div class="description">
       <h1>hi! i'm david lim.</h1>
       <h2>cs student @ utd</h2>
@@ -38,5 +40,6 @@
         </ul>
     </div>
     <script src="js/script.js"></script>
+<script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
 </body>
 </html>
