--- a/index.html
+++ b/index.html
@@ -21,14 +21,29 @@
         </nav>
     </div>
     <img class="profile" src="assets/DSC02592.JPG">
-<dotlottie-wc class="light-scroll" src="https://lottie.host/64a57eb9-553f-4b7b-b079-265538031f6b/yOF8qjkcfI.lottie" autoplay loop></dotlottie-wc>
+    <dotlottie-wc class="light-scroll" src="https://lottie.host/64a57eb9-553f-4b7b-b079-265538031f6b/yOF8qjkcfI.lottie" autoplay loop></dotlottie-wc>
     <dotlottie-wc class="dark-scroll"src="https://lottie.host/33d6004e-60b2-412f-9141-dba353a4229a/RZrMK2vpIH.lottie" autoplay loop></dotlottie-wc>
     <div class="description">
-      <h1>hi! i'm david lim.</h1>
-      <h2>cs student @ utd</h2>
-      <h2>software engineer</h2>
-      <h2>cat dad</h2>
-      <h3>i was born and raised in a small town in illinois.</h3>
+        <h1>hi! i'm david lim.</h1>
+        <h2>cs student @ utd</h2>
+        <h2>climbing nerd</h2>
+        <h2>cat dad</h2>
+        <h3>i was born and raised in a small
+        town in illinois, and i'm going to
+        be graduating utd in december
+        of 2026.
+        <br>
+        <br>
+        i'm a problemsolver— curious
+        and always trying to learn.
+        <br>
+        <br>
+        but very VERY far from where i want
+        to be.
+        <br>
+        <br>
+        if you'd like to learn more about me, check out my other pages, and feel free to <a href="mailto:contact@davidhopelim.com">reach out</a> to me.
+    </h3>
     </div>
     <div class="social-buttons">
         <ul>
@@ -40,6 +55,6 @@
         </ul>
     </div>
     <script src="js/script.js"></script>
-<script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
+    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
 </body>
 </html>
