feat: email button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <button class="theme-toggle" id="themeToggle" aria-label="Toggle light/dark theme">
         <i class="fa-solid fa-moon" id="themeIcon"></i>
     </button>
+    <a href="mailto:contact@davidhopelim.com">
+        <button class="message" id="messageButton">
+            <i class="fa-solid fa-comment-dots"></i>
+        </button>
+    </a>
     <div class="navigation-bar">
         <nav>
             <ul id="tab-list">
