feat: palette picker

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>david lim</title>
 </head>
 <body>
-    <button class="theme-toggle" id="themeToggle" aria-label="Toggle light/dark theme">
+    <button class="palette-toggle" id="paletteToggle">
+        <i class="fa-solid fa-palette"></i>
+    </button>
+    <aside class="palette-panel" id="palettePanel">
+        <div class="palette-header">
+        </div>
+        <div class="palette-swatches" id="paletteSwatches"></div>
+    </aside>
+    <button class="theme-toggle" id="themeToggle">
         <i class="fa-solid fa-moon" id="themeIcon"></i>
     </button>
     <a href="mailto:contact@davidhopelim.com">
@@ -48,7 +56,7 @@
         <br>
         <br>
         if you'd like to learn more about me, check out my other pages, and feel free to <a href="mailto:contact@davidhopelim.com">reach out</a> to me.
-    </h3>
+        </h3>
     </div>
     <div class="social-buttons">
         <ul>
