--- a/index.html
+++ b/index.html
@@ -35,26 +35,24 @@
     </div>
     <img class="profile" src="assets/DSC02592.JPG">
     <div class="description">
-        <h1>hi! i'm david lim.</h1>
-        <h2>cs student @ utd</h2>
-        <h2>climbing nerd</h2>
-        <h2>cat dad</h2>
-        <h3>i was born and raised in a small
+        <h1 class="reveal">hi! i'm david lim.</h1>
+        <h2 class="reveal">cs student @ utd</h2>
+        <h2 class="reveal">climbing nerd</h2>
+        <h2 class="reveal">cat dad</h2>
+        <h3 class="reveal">i was born and raised in a small
         town in illinois, and i'm going to
         be graduating utd in december
-        of 2026.
-        <br>
-        <br>
-        i'm a problemsolver— curious
-        and always trying to learn.
-        <br>
-        <br>
-        but very VERY far from where i want
-        to be.
-        <br>
-        <br>
-        if you'd like to learn more about me, check out my other pages, and feel free to <a href="mailto:contact@davidhopelim.com">reach out</a> to me.
-        </h3>
+        of 2026.</h3>
+        <br><br>
+        <h3 class="reveal">i'm a problemsolver— curious
+        and always trying to learn.</h3>
+        <br><br>
+        <h3 class="reveal">but very VERY far from
+        where i want to be.</h3>
+        <br><br>
+        <h3 class="reveal">if you'd like to learn more
+        about me, check out my other
+        pages, and feel free to <a href="mailto:contact@davidhopelim.com">reach out</a> to me.</h3>
     </div>
     <div class="social-buttons">
         <ul>
