--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="david lim's personal website">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/707024b310.js" crossorigin="anonymous"></script>
     <title>david lim</title>
 </head>
@@ -28,8 +28,8 @@
         <nav>
             <ul id="tab-list">
                 <li><a href="index.html">home</a></li>
-                <li><a href="#projects">projects</a></li>
-                <li><a href="#blog">blog</a></li>
+                <li><a href="html/projects.html">projects</a></li>
+                <li><a href="html/blog.html">blog</a></li>
             </ul>
         </nav>
     </div>
