--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <nav>
             <ul id="tab-list">
                 <li><a href="index.html">home</a></li>
-                <li><a href="html/projects.html">projects</a></li>
-                <li><a href="html/blog.html">blog</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="blog.html">blog</a></li>
             </ul>
         </nav>
     </div>
