--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </nav>
     </div>
     <img class="profile" src="assets/DSC02592.JPG">
-    <div class="description">
+    <div class="desc-frame">
+        <div class="description" id="desc">
         <h1 class="reveal">hi! i'm david lim.</h1>
         <h2 class="reveal">cs student @ utd</h2>
         <h2 class="reveal">climbing nerd</h2>
@@ -53,6 +54,11 @@
         <h3 class="reveal">if you'd like to learn more
         about me, check out my other
         pages, and feel free to <a href="mailto:contact@davidhopelim.com">reach out</a> to me.</h3>
+    </div>
+    <div class="scroll">
+        <div class="track" id="track"></div>
+        <div class="bar" id="bar"></div>
+    </div>
     </div>
     <div class="social-buttons">
         <ul>
