--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li><a href="https://www.instagram.com/davldlim" target="_blank">instagram</a></li>
         </ul>
     </div>
-    <script src="js/script.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js" type="module"></script>
+    <script src="js/theme.js"></script>
+    <script src="js/scroll.js"></script>
 </body>
 </html>
