refactor: made all project links consistent

--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
             <span>HTML</span><span>CSS</span><span>JavaScript</span><span>UI/UX</span>
           </div>
           <div class="project-links">
-            <a href="https://github.com/dav1dddddddd/webpage-new" target="_blank">github ↗</a>
+            <a href="https://github.com/dav1dddddddd/webpage-new" target="_blank">source code ↗</a>
           </div>
         </article>
       </div>
