refactor: changed title of pages respectively

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="description" content="david lim's personal website">
     <link rel="stylesheet" href="css/projects.css">
     <script src="https://kit.fontawesome.com/707024b310.js" crossorigin="anonymous"></script>
-    <title>david lim</title>
+    <title>projects • david lim</title>
 </head>
 <body>
     <button class="palette-toggle" id="paletteToggle">
