refactor: added header for consistency & clarity

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,7 @@
     </div>
     <section class="projects" id="projects">
       <header class="projects-header reveal">
+        <h1>projects</h1>
         <p>a few things i've built or worked on recently.</p>
       </header>
       <div class="projects-grid reveal-stagger">
