fix: capitalization & unused script

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
             <span class="project-year">2026</span>
           </div>
           <p class="project-desc">
-            A revamped version of my old website. simpler. friendlier. better.
+            A revamped version of my old website. Simpler. Friendlier. Better.
           </p>
           <div class="project-tags">
             <span>HTML</span><span>CSS</span><span>JavaScript</span><span>UI/UX</span>
@@ -111,6 +111,5 @@
         </ul>
     </div>
     <script src="js/theme.js"></script>
-    <script src="js/scroll.js"></script>
 </body>
 </html>
