--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <h2 class="blog-title">
-                    <a href="html/potential.html" class="blog-link">potential</a>
+                    <a href="html/greatness.html" class="blog-link">greatness</a>
                 </h2>
 
                 <p class="blog-excerpt">
