--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="david lim's blog">
+    <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="stylesheet" href="css/blog.css">
     <script src="https://kit.fontawesome.com/707024b310.js" crossorigin="anonymous"></script>
     <title>blog • david lim</title>
