--- a/html/greatness.html
+++ b/html/greatness.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="david lim blog post">
+  <link rel="icon" href="../assets/logo.png" type="image/png">
   <link rel="stylesheet" href="../css/posts/greatness.css">
   <script src="https://kit.fontawesome.com/707024b310.js" crossorigin="anonymous"></script>
   <title>post • david lim</title>
