--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <h2 class="blog-title">
-                    <a href="html/greatness.html" class="blog-link">greatness</a>
+                    <a href="posts/greatness.html" class="blog-link">greatness</a>
                 </h2>
 
                 <p class="blog-excerpt">
