refactor: changed email icon for more clarity

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
     </button>
     <a href="mailto:contact@davidhopelim.com">
         <button class="message" id="messageButton">
-            <i class="fa-solid fa-comment-dots"></i>
+            <i class="fa-solid fa-envelope"></i>
         </button>
     </a>
 
